--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,7 @@
+*{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 body {
     display: flex;
     height: 937px;
@@ -13,13 +17,13 @@ body {
 
 form {
     background: radial-gradient(#c0bcbc, #ffffff, #ffffff);
-    border-style: dashed;
     justify-content: center;
     border-width: 8px;
-    border-color: #363434;
+    border-color: #7c7777;
     text-align: center;
     align-items: center;
-    border-radius: 10px;
+    border-radius: 7px;
+    border: solid;
 }
 
 form .grupo {
